[package]
name = "hockey-plots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_plot = "0.27.2"
env_logger = "0.11.3"
reqwest = "0.12.3"
rusqlite = {version = "0.31.0", features = ["bundled"]}
serde = "1.0.197"
serde_json = "1.0.115"
serde_rusqlite = "0.35.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
